tests/vendor/valid/trivial/negate_int_max.c
//expect 1
//tags: trivial, unary
int main(void) {
    return -2147483647;
}