tests/vendor/invalid/syntax/unclosed_paren.c
//tags: trivial
int main(void)
{
    return (1;
}